--- a/Sha-GoogleMap-Routes/Sha-GoogleMap-Routes/Base.lproj/Main.storyboard
+++ b/Sha-GoogleMap-Routes/Sha-GoogleMap-Routes/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Lo6-VE-Ydg">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -27,14 +27,26 @@
         <scene sceneID="QJF-eR-hRn">
             <objects>
                 <viewController id="Lo6-VE-Ydg" customClass="GoogleMapViewController" customModule="Sha_GoogleMap_Routes" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="SUS-tx-XJn">
+                    <view key="view" contentMode="scaleToFill" id="2b7-fi-wi7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="Y6T-7q-f6f"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vtm-fT-NjN" customClass="GMSMapView">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="gcU-Gz-dqg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="vtm-fT-NjN" firstAttribute="leading" secondItem="gcU-Gz-dqg" secondAttribute="leading" id="JQq-lI-O0v"/>
+                            <constraint firstItem="vtm-fT-NjN" firstAttribute="top" secondItem="gcU-Gz-dqg" secondAttribute="top" id="XBC-5x-8wW"/>
+                            <constraint firstItem="gcU-Gz-dqg" firstAttribute="bottom" secondItem="vtm-fT-NjN" secondAttribute="bottom" id="dbw-V0-BMe"/>
+                            <constraint firstItem="gcU-Gz-dqg" firstAttribute="trailing" secondItem="vtm-fT-NjN" secondAttribute="trailing" id="uIq-RP-Xdw"/>
+                        </constraints>
                     </view>
                     <connections>
-                        <outlet property="googleMapView" destination="SUS-tx-XJn" id="BK3-E6-tpO"/>
+                        <outlet property="googleMapView" destination="vtm-fT-NjN" id="rnI-18-g3u"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q0v-P9-JSE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
